--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\kleinknech\\.virtualenvs\\GAN-for-credit-default-POY3WUKy\\Scripts\\python.exe"
+    "python.pythonPath": "/Users/amalboussetta/.local/share/virtualenvs/GAN-for-credit-default-jWT487zB/bin/python"
 }
